# synthex-ai-studio

./: .gitignore  CHANGELOG.md  ProjectBrain_FiveDimension_Metrics.docx.md  README.md  README_EN.md
.github/workflows/: static.yml
project-brain/: .gitignore  CHANGELOG.md  CLAUDE.md  COMMANDS.md  COMPLETED_HISTORY.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  INSTALL.md  PROJECT_BRAIN.md  README.md  SECURITY.md  brain.py  index.html  pyproject.toml  pytest.ini  requirements.txt
project-brain/core/: __init__.py
project-brain/core/brain/: __init__.py  api_server.py  archaeologist.py  condition_watcher.py  consolidation.py  context.py  decay_engine.py  deduplicator.py  engine.py  event_bus.py  extractor.py  graph.py  graphiti_adapter.py  knowledge_distiller.py  knowledge_resolver.py  knowledge_validator.py  mcp_server.py  nudge_engine.py  output.py  review_board.py  router.py  semantic_dedup.py  session_store.py  spaced_repetition.py  status_renderer.py
project-brain/core/brain/web_ui/: __init__.py  server.py
project-brain/docs/: ARCHITECTURE_REVIEW.md  AUTO_KNOWLEDGE_PIPELINE.md  BRAIN_INTEGRATION.md  BRAIN_MASTER.md  COMPLETED_HISTORY.md  EXPERIMENT_REPORT.md  brain-flow-light.html  brain_llm_memory_flow.html  brain_llm_memory_flow_standalone.html  index.html  project-brain-infographic-light.html
project-brain/docs/experiments/fastapi/: README.md
project-brain/project_brain/: __init__.py  analytics_engine.py  ann_index.py  api_server.py  archaeologist.py  brain_config.py  brain_db.py  cli.py  cli_admin.py  cli_fed.py  cli_knowledge.py  cli_serve.py  cli_utils.py  condition_watcher.py  conflict_resolver.py  consolidation.py  constants.py  context.py  context_result.py  decay_engine.py  deduplicator.py  embedder.py  engine.py  event_bus.py  extractor.py  federation.py  feedback_tracker.py  graph.py  graphiti_adapter.py  knowledge_distiller.py  knowledge_resolver.py  knowledge_validator.py  krb_ai_assist.py  llm_judgment.py  mcp_server.py  memory_synthesizer.py  nudge_engine.py  output.py  pipeline.py  pipeline_worker.py  (+10 more)
project-brain/project_brain/core/: __init__.py  brain_db.py  constants.py  session_store.py
project-brain/project_brain/engines/: __init__.py  context.py  decay_engine.py  knowledge_validator.py  memory_synthesizer.py  nudge_engine.py  review_board.py
project-brain/project_brain/integrations/: __init__.py  federation.py
project-brain/project_brain/interfaces/: __init__.py  api_server.py  cli.py  cli_admin.py  cli_knowledge.py  cli_utils.py  mcp_server.py
project-brain/project_brain/pipeline/: __init__.py  executor.py  llm_judgment.py  signal.py  worker.py
project-brain/project_brain/web_ui/: __init__.py  server.py
project-brain/tests/: TEST_PLAN.md  test_api.py  test_chaos_and_load.py  test_cli.py  test_core.py  test_mcp.py
project-brain/tests/benchmarks/: benchmark_recall.py  benchmark_rev01.py
project-brain/tests/chaos/: test_chaos_and_load.py  test_decay_load.py
project-brain/tests/integration/: test_cli.py  test_phase2.py  test_q2.py  test_web_ui.py
project-brain/tests/unit/: test_arch_decisions_v01.py  test_arch_decisions_v02.py  test_arch_decisions_v03.py  test_arch_decisions_v04.py  test_arch_decisions_v05.py  test_arch_decisions_v06.py  test_bug_a03_locking.py  test_core.py  test_federation.py  test_llm_judgment.py  test_mem_improvements.py  test_perf03_token_cache.py  test_pipeline_executor.py  test_pipeline_signal.py  test_pipeline_worker.py  test_ref04_constants.py  test_session_store.py
project-template/: CLAUDE.md
project-template/agents/ARIA/: SKILL.md
project-template/agents/ATLAS/: SKILL.md
project-template/agents/ATOM/: SKILL.md
project-template/agents/BOLT/: SKILL.md
synthex-ai-studio/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  EVALS.md  INSTALL.md  PROJECT_BRAIN.md  README.md  SECURITY.md  brain.py  requirements.txt  synthex.py
synthex-ai-studio/agents/: __init__.py  all_agents.py
synthex-ai-studio/core/: advanced_tool_use.py  base_agent.py  browser_qa.py  computer_use.py  config.py  deploy_pipeline.py  evals.py  logging_setup.py  mcp_server.py  observability.py  orchestrator.py  project_scanner.py  rate_limiter.py  swarm.py  tools.py  web_orchestrator.py  web_tools.py
synthex-ai-studio/evals/: results.db
synthex-ai-studio/tests/: test_core.py
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+53 files in other folders)
